<resources>
    <string name="app_name">Group14</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swipe_left_for_register">Swipe left for register</string>
    <string name="swipe_right_for_login">Swipe right for login</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="tag">Welcome</string>
    <string name="e_mail">Enter email</string>
    <string name="your_name">Enter full name</string>
    <string name="re_type_password">Confirm password</string>
    <string name="password">Enter password</string>
    <string name="salonist">Salonist</string>
    <string name="client">Client</string>
    <string name="welcome">Welcome User</string>
    <string name="home">Recently viewed Profiles</string>
    <string name="home2">Popular profiles</string>
    <string name="title_activity_salonist_profile">SalonistProfile</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="Profile">profile</string>
</resources>
