<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="165dp"
        android:layout_height="124dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="267dp"
        android:layout_marginTop="608dp"
        android:layout_marginEnd="-21dp"
        android:layout_marginBottom="-1dp"
        android:src="@drawable/bottom_light" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="163dp"
        android:layout_height="203dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-6dp"
        android:layout_marginTop="-42dp"
        android:layout_marginEnd="254dp"
        android:src="@drawable/logo_light" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="168dp"
        android:layout_height="79dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="127dp"
        android:layout_marginTop="29dp"
        android:src="@drawable/reg" />
    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/aguafina_script"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:layout_marginStart="127dp"
        android:layout_marginTop="99dp"
        android:textSize="40sp" />
    <TextView
        android:id="@+id/home1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/poppins"
        android:text="@string/home"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:layout_marginStart="12dp"
        android:layout_marginTop="200dp"
        android:textSize="15sp" />
    <TextView
        android:id="@+id/home2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/poppins"
        android:text="@string/home2"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:layout_marginStart="12dp"
        android:layout_marginTop="400dp"
        android:textSize="15sp" />
</RelativeLayout>